--- a/base.css
+++ b/base.css
@@ -114,7 +114,7 @@ h3 {
 	color:rgba(233, 16, 16, 0.815);
 }
 
-@media screen and (max-width: 53em) {
+@media screen and (max-width: 1024px) {
 
 	h3 {
 		font-size: 12px;
@@ -133,168 +133,54 @@ p {
 }
 
 
-
-footer {
-	display: flex; 
-	flex-direction: row;
-	justify-content: space-around;
-    align-items: center;
-	padding: 10px;
-	background-color: var(--color-link-hover);
-	opacity: 0.98;
-	margin-top: auto;
-	bottom: 0;
+.header {
+	padding: 4rem 0 4rem 0;
 	
 }
 
-footer p {
-	color: white;
-}
-
-.footer-left {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-    justify-content: space-between;
-}
-
-
-/* title styles */
-/* .home-title span{
-    position: relative;
-    overflow: hidden;
-    display: block;
-    line-height: 1.2;
-}
-
-.home-title span::after{
-    content: '';
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 100%;
-    height: 100%;
-    background: var(--color-dark);
-    animation: a-ltr-after 1.2s cubic-bezier(.77,0,.18,1) forwards;
-    transform: translateX(-101%);
-}
-
-.home-title span::before{
-    content: '';
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 100%;
-    height: 100%;
-    background: var(--bg-color);
-    animation: a-ltr-before 1.2s cubic-bezier(.77,0,.18,1) forwards;
-    transform: translateX(0);
-}
-
-.home-title span:nth-of-type(1)::before,
-.home-title span:nth-of-type(1)::after{
-    animation-delay: 0.75s;
-}
-
-.home-title span:nth-of-type(2)::before,
-.home-title span:nth-of-type(2)::after{
-    animation-delay: 0.5s;
-}
-
-@keyframes a-ltr-after{
-    0% {transform: translateX(-100%)}
-    100% {transform: translateX(101%)}
-}
-
-@keyframes a-ltr-before{
-    0% {transform: translateX(0)}
-    100% {transform: translateX(200%)}
-} */
+/* title */
 
 
 
+.text-title {
+	position: absolute;
+	right: 50%;
+	transform: translate(50%,0);
+	 text-transform: uppercase;
+	 font-size: 5rem;
+	 font-weight: 700;
+	 color: #f5f5f5;
+	 text-shadow: 1px 1px 1px #919191,
+		 1px 2px 1px #919191,
+		 1px 3px 1px #919191,
+		 1px 4px 1px #919191,
+		 1px 5px 1px #919191,
+		 1px 6px 1px #919191,
+		 1px 7px 1px #919191,
+		 1px 8px 1px #919191,
+		 1px 9px 1px #919191,
+		 1px 10px 1px #919191,
+	 1px 18px 6px rgba(16,16,16,0.4),
+	 1px 22px 10px rgba(16,16,16,0.2),
+	 1px 25px 35px rgba(16,16,16,0.2),
+	 1px 30px 60px rgba(16,16,16,0.4);
+ }
+ 
+ 
+ @media screen and (max-width: 1024px){
+	 .text-title {
+		 position: absolute;
+		 right: 50%;
+		 transform: translate(50%,0);
+		  text-transform: uppercase;
+		  font-size: 3em;
+		  font-weight: 700;
+		 padding-bottom: 3em;
+	  }
+ }
+ 
+ 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* clouds */
-/* .cloud-text {
-	
-	-webkit-background-clip: text;
-  	-webkit-text-fill-color: transparent;	
-	background-image: url(https://images.unsplash.com/photo-1525667218880-145f026b0ad0?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2162&q=80);
-	background-size: auto;
-	background-attachment: unset;
-	background-position: 0%;
-	width: 100%;
-	margin: 10%;
-	font-size: 12vw;
-	font-weight: bold;
-	animation: clouds-moving infinite 60s;
-	animation-fill-mode: forwards;
-	animation-play-state: running;
-	animation-timing-function: linear;
-	text-align: center;
-}
-@keyframes clouds-moving {
-	0% {
-		background-position: 0%;	
-	}
-	50% {
-		background-position: 100%;	
-	}
-	100% {
-		background-position: 0%;
-	}
-}
-.attribute {
-	position: relative;
-	font-size: 26px;
-	text-align: center;
-} */
-
-
-
-
-
-
-
-/* background */
-/* #background{
-	position:absolute;
-	font-family:'Helvetica';
-	top:50%;
-	left:50%;
-	transform:translate(-50%, -50%);
-	color:rgba(255, 255, 255, .1);
-	background: linear-gradient(to right,     rgb(76, 217, 105), rgb(52, 170, 220),     rgb(88, 86, 217), rgb(255, 45, 83),       rgb(255, 45, 83), rgb(88, 86, 217),       rgb(52, 170, 220), rgb(76, 217, 105));
-	background-size: 400%;
-	-webkit-background-clip:text;
-	font-weight:900;
-	font-size:2em;
-	text-align:left;
-	animation:sTransition 15s linear infinite;
-  }
-  
-  @keyframes sTransition{
-	0%{
-	  background-position:0%;
-	}
-	
-	100%{
-	  background-position:400%;
-	}
-  } */
 
 
 
@@ -372,7 +258,7 @@ footer p {
 }
 
 
-@media screen and (max-width: 53em) {
+@media screen and (max-width: 1024px) {
 	.frame__title {
 		/* font-size: 2vh;
 		margin: auto;
@@ -461,7 +347,7 @@ footer p {
 
 /* Shorthand grid-area: grid-row-start / grid-column-start / grid-row-end / grid-column-end */
 
-@media screen and (max-width: 53em) {
+@media screen and (max-width: 1024px) {
 
 	
 	
@@ -610,7 +496,7 @@ footer p {
 }
 
 
-@media screen and (max-width: 53em) {
+@media screen and (max-width: 1024px) {
 	.content__title {
 		color: rgba(0, 0, 0, 0.418);
 		font-weight: bold;
@@ -634,7 +520,7 @@ footer p {
 
 
 
-@media screen and (max-width: 53em) {
+@media screen and (max-width: 1024px) {
 
 	.parent {
 
@@ -645,29 +531,64 @@ footer p {
 		justify-content: center;
 		align-content: space-around;
 		
-		/* overflow-x: hidden; */
-		
 	  }
 	  .img {
-		
-		max-width: 700px;
-		width: 100%;
+		width:100%; 
+		max-width: 600px; 
+		padding: 2em; 
 		height: auto;
-		min-height: 700px;
-		padding: 2rem;
-		margin-top: 2rem;
-		
-		/* max-width: 200px; */
 	  }
 	  
 	  .txt {
-		width: auto;
-		padding: 2rem;
-		/* min-height: 500px; */
+		width: 95%;
+		padding: 1rem;
 		color: #222;
+		}
+
+	.txt p{
+		font-size: 14px;
+		line-height: 1.4rem;
+	}
+
+	.first-letter{
+		font-size: 1.9rem; 
+		color: red; 
+		font-weight: bold; 
+		font-family: serif;
+	}
+
+	.first-letter{
+		font-size: 2rem; 
+		color: red; 
+		font-weight: bold; 
+		font-family: serif;
+	}
+	
+	
+	footer {
+	display: flex; 
+	flex-direction: column;
+	justify-content: space-around;
+	align-items: center;
+	background-color: var(--color-link-hover);
+	opacity: 0.98;
+	/* margin-top: auto; */
+	bottom: 0;
 		
-		
-	  }
+	}
+	
+	footer p {
+	color: white;
+	font-size: 12px;
+	line-height: .5rem;
+	}
+	
+	.footer-left {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: space-between;
+	}
 
 
 }
@@ -676,27 +597,38 @@ footer p {
 
 
 
-  /* .parent {
-	margin-top: 7rem;
-	padding-top: 2rem;
-	
-	flex-direction: row;
-	
-	width: 100%;
-	
-  } */
-  
-  .img {
-	/* width: 30%; */
-	/* padding: 2em; */
-	
-  }
-  
-  .txt {
-	/* width: 30%; */
+/* 
+@media screen and (min-width: 1024px) {
 
+
+
+	.parent {
+		margin-top: 7rem;
+		padding-top: 2rem;
+		display: flex;
+		flex-direction: row;
+		
+		width: 100%;
+		
+	  }
+	  
+	  .img {
+		width: 500px; 
+		height: auto;
+		padding: 2em;
+		
+	  }
+	  
+	  .txt {
+		width: 30%;
 	
-  }
+		
+	  }
+
+
+} */
+
+
 
 
 
@@ -730,7 +662,7 @@ footer p {
 
 
 
-@media screen and (min-width: 53em) {
+@media screen and (min-width: 1024px) {
 	/* .message {
 		display: none;
 	} */
@@ -1012,7 +944,7 @@ footer p {
 
 	.parent {
 		/* margin-top: 3rem; */
-		padding-top: 2rem;
+		padding-top: 7rem;
 		display: flex;
 		flex-direction: row;
 		justify-content: center;
@@ -1023,15 +955,15 @@ footer p {
 	  }
 	  
 	  .img {
-		/* width: 25%; */
+		width: 45%;
 		padding: 2em;
 		/* color: #ffffff; */
-		height: 100%;
-		min-height: 800px;
+		height: auto;
+		/* min-height: 600px; */
 	  }
 	  
 	  .txt {
-		width: 25%;
+		width: 45%;
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
@@ -1042,7 +974,35 @@ footer p {
 		
 	  }
 	  
+	.txt p{
+		font-size: 1.2rem;
+	}
+
+
+
+	  footer {
+		display: flex; 
+		flex-direction: row;
+		justify-content: space-around;
+		align-items: center;
+		padding: 10px;
+		background-color: var(--color-link-hover);
+		opacity: 0.98;
+		margin-top: auto;
+		bottom: 0;
+		
+	}
 	
+	footer p {
+		color: white;
+	}
+	
+	.footer-left {
+		display: flex;
+		flex-direction: row;
+		align-items: center;
+		justify-content: space-between;
+	}
 
 
 
@@ -1483,13 +1443,14 @@ footer p {
     grid-template-columns: repeat(2, 1fr);
     grid-auto-rows: 20px;
     justify-content: center;
-    margin: auto;
+    margin: 4rem auto auto auto;
+	padding-top: 3rem;
     
   }
 
 
 
-  @media screen and (max-width: 53em) {
+  @media screen and (max-width: 1024px) {
 
     .ksgrid {
         width:100%;
@@ -1882,14 +1843,15 @@ footer p {
 
 
 
-@media screen and (max-width: 991px) {
+@media screen and (max-width: 1024px) {
   .menu-icon:checked + label,
   .menu-icon:not(:checked) + label{
     right: 55px;
+	top: 35px;
   }
   
   .nav{
-    top: 48px;
+    top: 23px;
   	right: 43px;
   	width: 50px;
   	height: 50px;
@@ -1910,12 +1872,6 @@ footer p {
   }
   
 }
-
-
-
-
-
-
 
 
 
